oc-kustomize/base/1.6-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: todo-app
spec:
  selector:
    app: todo-app
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 3000
  type: ClusterIP
